<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_camera</name>
  <version>1.0.0</version>
  <description>camera ros2node</description>
  <maintainer email="quic_tlnu@quicinc.com">Tian Ding</maintainer>
  <license>BSD-3-Clause-Clear</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_components</depend>
  <depend>rcutils</depend>
  <depend>qrb_ros_transport</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
